Update MIH theme, small logo spacing issue

--- a/public/themes/mih/theme.less
+++ b/public/themes/mih/theme.less
@@ -112,6 +112,7 @@ div#custom-branding {
 }
 
 #mih-branding {
+	padding-top:		3px;
 	height: 			3em;
 	background-color: 	@brand_colour;
 	float: 				left;
